[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/ant.webp" type="Texture" id=1]
[ext_resource path="res://scripts/ant.gd" type="Script" id=2]
[ext_resource path="res://scenes/Pheromone.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Sensor.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 6.41572 )

[sub_resource type="CircleShape2D" id=3]
radius = 2.03339

[node name="KinematicBody2D" type="KinematicBody2D"]
collision_mask = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
steering_degrees = 5.0
left_sensor_path = NodePath("Left sensor")
middle_sensor_path = NodePath("Middle sensor")
right_sensor_path = NodePath("Right sensor")
mouth_path = NodePath("Mouth")
pheromone = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.00131083 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 3.55271e-14, -9.53674e-07 )
rotation = 1.5708
scale = Vector2( 0.0390972, 0.039 )
z_index = 1
z_as_relative = false
texture = ExtResource( 1 )

[node name="Left sensor" parent="." instance=ExtResource( 7 )]
position = Vector2( 22, -32 )

[node name="Middle sensor" parent="." instance=ExtResource( 7 )]
position = Vector2( 39, 0 )

[node name="Right sensor" parent="." instance=ExtResource( 7 )]
position = Vector2( 22, 32 )

[node name="Mouth" type="Area2D" parent="."]
position = Vector2( 8, 0 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Mouth"]
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.213
autostart = true

[connection signal="area_entered" from="Mouth" to="." method="_on_Mouth_area_entered" flags=3]
[connection signal="body_entered" from="Mouth" to="." method="_on_Mouth_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
